--- a/odp-app/src/app/modules/admin/persons/edit/edit.component.html
+++ b/odp-app/src/app/modules/admin/persons/edit/edit.component.html
@@ -1,72 +1,69 @@
-<div class="flex flex-auto">
-    <div class="flex flex-col flex-auto p-6 pt-10 sm:p-8 sm:pt-10 overflow-y-auto">
+<div class="flex flex-auto bg-gray-50 min-h-screen">
+    <div class="flex flex-col flex-auto max-w-2xl mx-auto bg-white rounded-lg shadow-lg p-6 pt-10 sm:p-10 overflow-y-auto">
         <!-- Header -->
-        <div class="flex items-center justify-between -mt-3 -ml-4">
+        <div class="flex items-center justify-between -mt-3 -ml-4 mb-2">
             <div class="pr-4 pl-3">
-                <h1 class="text-2xl font-semibold">{{ isEdit ? 'แก้ไขข้อมูลลูกค้า' : 'เพิ่มข้อมูลลูกค้า' }}</h1>
+                <h1 class="text-3xl font-bold text-gray-800">{{ isEdit ? 'แก้ไขข้อมูลลูกค้า' : 'เพิ่มข้อมูลลูกค้า' }}</h1>
             </div>
             <div class="flex items-center">
-                <button mat-icon-button (click)="onClose()" name="close">
+                <button mat-icon-button (click)="onClose()" name="close" aria-label="ปิด" class="hover:bg-gray-200 rounded-full">
                     <mat-icon [svgIcon]="'heroicons_outline:x-mark'"></mat-icon>
                 </button>
             </div>
         </div>
 
-        <mat-divider class="mt-2 mb-3"></mat-divider>
-
+        <mat-divider class="mt-2 mb-6"></mat-divider>
         <form *ngIf="initForm" [formGroup]="initForm" class="h-full flex flex-col">
-            <div class="flex flex-col gap-y-4 flex-1 overflow-y-auto">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>เลขบัตรประชาชน</mat-label>
-                        <input matInput placeholder="เลขบัตรประชาชน" formControlName="n_id">
-                    </mat-form-field>
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>ชื่อจริง</mat-label>
-                        <input matInput placeholder="ชื่อจริง" formControlName="name">
-                    </mat-form-field>
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>นามสกุล</mat-label>
-                        <input matInput placeholder="นามสกุล" formControlName="surname">
-                    </mat-form-field>
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>วันเกิด</mat-label>
-                        <input matInput [matDatepicker]="picker" placeholder="เลือกวันเกิด" formControlName="dob">
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>เพศ</mat-label>
-                        <input matInput placeholder="เพศ" formControlName="gender">
-                    </mat-form-field>
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>เชื้อชาติ</mat-label>
-                        <input matInput placeholder="เชื้อชาติ" formControlName="citizen">
-                    </mat-form-field>
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>สัญชาติ</mat-label>
-                        <input matInput placeholder="สัญชาติ" formControlName="nationality">
-                    </mat-form-field>
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>ศาสนา</mat-label>
-                        <input matInput placeholder="ศาสนา" formControlName="religion">
-                    </mat-form-field>
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>เบอร์โทร</mat-label>
-                        <input matInput placeholder="เบอร์โทร" formControlName="phone">
-                    </mat-form-field>
-                    <mat-form-field class="w-full" subscriptSizing="dynamic">
-                        <mat-label>ที่อยู่</mat-label>
-                        <input matInput placeholder="ที่อยู่" formControlName="address">
-                    </mat-form-field>
-                </div>
+            <div class="flex flex-col gap-6 flex-1 overflow-y-auto">
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>เลขบัตรประชาชน</mat-label>
+                    <input matInput placeholder="เลขบัตรประชาชน" formControlName="n_id">
+                </mat-form-field>
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>ชื่อจริง</mat-label>
+                    <input matInput placeholder="ชื่อจริง" formControlName="name">
+                </mat-form-field>
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>นามสกุล</mat-label>
+                    <input matInput placeholder="นามสกุล" formControlName="surname">
+                </mat-form-field>
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>วันเกิด</mat-label>
+                    <input matInput [matDatepicker]="picker" placeholder="เลือกวันเกิด" formControlName="dob">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>เพศ</mat-label>
+                    <input matInput placeholder="เพศ" formControlName="gender">
+                </mat-form-field>
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>เชื้อชาติ</mat-label>
+                    <input matInput placeholder="เชื้อชาติ" formControlName="citizen">
+                </mat-form-field>
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>สัญชาติ</mat-label>
+                    <input matInput placeholder="สัญชาติ" formControlName="nationality">
+                </mat-form-field>
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>ศาสนา</mat-label>
+                    <input matInput placeholder="ศาสนา" formControlName="religion">
+                </mat-form-field>
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>เบอร์โทร</mat-label>
+                    <input matInput placeholder="เบอร์โทร" formControlName="phone">
+                </mat-form-field>
+                <mat-form-field class="w-full" subscriptSizing="dynamic">
+                    <mat-label>ที่อยู่</mat-label>
+                    <input matInput placeholder="ที่อยู่" formControlName="address">
+                </mat-form-field>
             </div>
 
-            <mat-divider></mat-divider>
+            <mat-divider class="mt-8"></mat-divider>
 
             <div class="flex items-center justify-end p-4 gap-x-4">
-                <button mat-button (click)="onClose()">ยกเลิก</button>
-                <button mat-flat-button color="primary" (click)="onSave()">บันทึก</button>
+                <button mat-button (click)="onClose()" class="rounded-full px-6 py-2">ยกเลิก</button>
+                <button mat-flat-button color="primary" (click)="onSave()" class="rounded-full px-6 py-2 font-semibold">บันทึก</button>
             </div>
         </form>
     </div>
